<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_24sdp"
                android:src="@drawable/image_background_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/shabnam_bold"
                android:text="@string/name_app"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
                app:layout_constraintStart_toStartOf="@+id/shapeableImageView"
                app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:fontFamily="@font/shabnam"
                android:text="@string/description_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:hint="@string/hint_username_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_baseline_person_24"
                    android:fontFamily="@font/shabnam" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/hint_password_login"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_baseline_lock_24"
                    android:fontFamily="@font/shabnam" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_margin="@dimen/_24sdp"
                android:backgroundTint="@color/custom_green2"
                android:fontFamily="@font/shabnam_bold"
                android:text="@string/button_sing_in_login"
                app:cornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>