<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addGood.AddGoodFragment">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:backgroundTint="@color/custom_green2"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
            app:fabCustomSize="@dimen/_65sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <include
            android:id="@+id/include_add_good"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_add_good">

            <AutoCompleteTextView
                android:id="@+id/auto_complate_good_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shabnam"
                android:dropDownHeight="@dimen/_150sdp"
                android:hint="@string/good_type"
                android:inputType="none"
                android:text="@string/good_type" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout8"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout8"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shabnam"
                android:dropDownHeight="@dimen/_150sdp"
                android:hint="@string/chose_store"
                android:inputType="none"
                android:text="@string/chose_store" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_part"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shabnam"
                android:dropDownHeight="@dimen/_150sdp"
                android:hint="@string/chose_part"
                android:inputType="none"
                android:text="@string/chose_part" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shabnam"
                android:dropDownHeight="@dimen/_150sdp"
                android:hint="@string/chose_person"
                android:inputType="none"
                android:text="@string/chose_person" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>